# modgud

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OPTIMIZATION_REVIEW.md  LICENSE  OPTIMIZATION_PATCHES.md  OPTIMIZATION_SUMMARY.md  README.md  gen-layout.py  how-close-lpa.md  how-much-diff.md  modgud-lpa-95.md  mypy.toml  pyproject.toml  ruff.toml
docs/: README.md  api-reference.md  expression-oriented-features.md  how-it-works.md  modgud-comply-v8.md  modgud-expression-features-guide.md
docs/adr/: ADR-001-implicit-return-transformation-approach.md  ADR-002-guard-pattern-design-rationale.md  ADR-003-registry-system-architecture.md  README.md
docs/architecture/: README.md  adapter_shape.xml  diagram.dependency.package.drawio  doc-structure.drawio  kinetic-layered-architecture1.drawio  kla-architecture-v4.6.6.md  koa1.drawio  port_adapter.xml  shape-adapter.xml  shape-port.xml  shape-teeth.xml
modgud/: __init__.py
modgud/app/: __init__.py
modgud/app/decorator/: chained_expression_decorator.py  guarded_expression.py  implicit_return_decorator.py  inject_decorator.py  pipeable.py  safe_expression_decorator.py
modgud/application/: __init__.py  decorator.py  guard_checker.py  registry.py  validators.py
modgud/domain/: __init__.py  decorator_factory_protocol.py  enums.py  exceptions.py  maybe_protocol.py  messages.py  models.py  pipeable_protocol.py  ports.py  protocols.py  result_protocol.py  services.py  types.py
modgud/domain/models/: error_messages_model.py  info_messages_model.py  types.py
modgud/domain/ports/: __init__.py  ast_transformer_port.py  guard_checker_port.py  guard_port.py  guard_service_port.py  transform_port.py  transform_service_port.py  validation_port.py  validation_service_port.py
modgud/expression_oriented/: __init__.py
modgud/expression_oriented/core/: __init__.py  common_guards.py  guard_registry.py  guard_runtime.py  implicit_return.py
modgud/expression_oriented/decorator/: __init__.py  chained_expression_decorator.py  guarded_expression.py  implicit_return_decorator.py  inject_decorator.py  pipeable.py  safe_expression_decorator.py
modgud/expression_oriented/factory/: __init__.py  chained_expression_factory.py  maybe_factory.py  result_factory.py  safe_expression_factory.py
modgud/expression_oriented/maybe/: __init__.py  maybe_base.py  nothing_maybe.py  some_maybe.py
modgud/expression_oriented/results/: __init__.py  err_result.py  ok_result.py  result_base.py
modgud/expression_oriented/tool/: chainable_expression.py
modgud/guarded_expression/: __init__.py  ast_transform.py  common_guards.py  decorator.py  errors.py  guard_registry.py  guard_runtime.py  guarded_expression.py  implicit_return.py  implicit_return_decorator.py  messages.py  pipeable.py  types.py
modgud/infrastructure/: __init__.py  ast_transformer.py  chained_expression_factory.py  common_guards.py  err_result.py  guard_registry.py  guard_runtime.py  implicit_return.py  maybe_factory.py  nothing_maybe.py  ok_result.py  pipeable_factory.py  pipeable_wrapper.py  repository.py  result_factory.py  safe_expression_factory.py  some_maybe.py  uuid_provider.py
modgud/infrastructure/adapters/: __init__.py  ast_transformer.py  ast_transformer_adapter.py  guard_adapter.py  guard_checker.py  guard_checker_adapter.py  guard_service_adapter.py  transform_adapter.py  transform_service_adapter.py  validation_adapter.py  validation_service_adapter.py
modgud/infrastructure/di/: __init__.py  energy_inverter.py  registration_strategies.py
modgud/infrastructure/factory/: __init__.py  chained_expression_factory.py  result_factory.py  safe_expression_factory.py
modgud/infrastructure/gateways/: domain_gateway.py
modgud/infrastructure/interfaces/: guard_service_interface.py  transform_service_interface.py  validation_service_interface.py
modgud/infrastructure/maybe/: __init__.py  maybe_factory.py  some_maybe.py
modgud/infrastructure/ports/: __init__.py  guard_service_port.py  transform_service_port.py  validation_service_port.py
modgud/infrastructure/protocols/: transformation_protocol.py  validation_protocol.py
modgud/infrastructure/results/: __init__.py  err_result.py  ok_result.py
modgud/shared/: __init__.py  errors.py  types.py
modgud/surface/: __init__.py  common_guards.py  decorator.py  registry.py  validators.py
modgud/util/: __init__.py  ansi_string.py  app_logger.py  console_formatter.py  data_struct_util.py  dependency_analyzer.py  json_formatter.py  lerper.py  math_util.py  output_capture.py  ranger.py  spinner.py  text_util.py  version.py
tests/: __init__.py  helpers.py  test_ast_transform.py  test_async_guards.py  test_basic_guards.py  test_common_guards_extended.py  test_common_guards_integration.py  test_custom_guards.py  test_decorator_composition.py  test_edge_cases.py  test_fixtures.py  test_guard_runtime.py  test_guarded_expression.py  test_implicit_returns.py  test_lerper.py  test_metadata.py  test_pipeable.py  test_pipeable_composition.py  test_pipeable_edge_cases.py  test_vector.py
tests/general/: __init__.py  test_architecture.py  test_decorator_edge_cases.py  test_decorator_without_guards.py  test_error_conditions.py  test_guard_composition.py  test_implicit_return_edge_cases.py  test_metadata_preservation.py  test_performance.py  test_thread_safety.py
tests/helpers/: __init__.py  helpers.py  test_fixtures.py
tests/infrastructure/: test_ast_edge_cases.py  test_basic_transformations.py  test_check_guards.py  test_complex_try_statements.py  test_handle_failure.py  test_match_statements.py  test_transformation_errors.py
tests/integration/: test_async_function_support.py  test_basic_guard_execution.py  test_common_guard_validation.py  test_guard_failure_handling.py  test_guard_parameter_handling.py  test_implicit_return_basics.py  test_implicit_return_with_guards.py  test_multiple_guards.py
tests/surface/: __init__.py  test_combined_guards.py  test_extract_param.py  test_global_registry_functions.py  test_guard_registry.py  test_valid_enum_guard.py  test_valid_file_path_guard.py  test_valid_url_guard.py
tmp/: .gitkeep
(+29 files in other folders)
