[project]
name = "modgud"
authors = [{ name = "steven.miers@gmail.com" }]
description = "Expression-oriented programming for Python 3.13+ with guard clause decorators and implicit returns. Eliminate defensive coding clutter through declarative input validation and Ruby/Rust-style automatic return transformation, all while maintaining single return point architecture and zero runtime dependencies."
keywords = ["guards", "validation", "decorators", "defensive-programming", "single-return-point", "implicit-return"]
license = { text = "MIT" }
requires-python = ">=3.6"
version = "1.2.7" # Uses poetry-dynamic-versioning

[project.urls]
Homepage = "https://github.com/terracoil/modgud/blob/master/README.md"
Repository = "https://github.com/terracoil/modgud"
Documentation = "https://github.com/terracoil/modgud/blob/main/docs/README.md"

[tool.poetry]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
include = ["LICENSE", "README.md", "modgud/py.typed"]
packages = [{ include = "modgud" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.7"
# No runtime dependencies - modgud only stdlib

[dependency-groups]
test = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-timeout (>=2.3.1,<3.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "ruff (>=0.14.2,<0.15.0)"
]
dev = [
    { include-group = "test" },
    "freyja (>=1.1.0,<2.0.0)",
    "mypy[reports] (>=1.18.2,<2.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "poetry-dynamic-versioning (>=1.9.1,<2.0.0)"
]

[tool.pytest.ini_options]
cache_dir = "tmp/.pytest_cache"
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=modgud --cov-report=term-missing --cov-report=html:reports/coverage --cov-report=xml:reports/coverage/converage.xml"
log_file = "tmp/pytest.log" # Path to the log file
log_file_level = "DEBUG" # Minimum level for logging to file
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
